# gen-ai-case

./: .gitignore  .pylintrc  README.md  docker-compose.yml  pyproject.toml
new_data/base_nodes/: docstore.json  index_store.json
new_data/ec0ae70f-02c5-4e3c-82d4-a50b3fa1fc40/: index_metadata.pickle
new_data/sentence_nodes/: index_store.json
src/app/: __main__.py  chroma.py  common.py  evaluate.py  evaluvator.py  ingest.py  log.py  main.py  query.py
